[workspace]
resolver = "2"
members = [
    "crates/quicforge-types",
    "crates/quicforge-resilience",
    "crates/quicforge-core",
    "crates/quicforge-infra",
    "crates/quicforge-api",
    "crates/quicforge-node",
]
exclude = ["target"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Abhijeet Ashok Muneshwar <openingknots@gmail.com>"]
repository = "https://github.com/ABHIJEET-MUNESHWAR/QuicForge"
description = "QUIC/kernel latency lab: measures TPU-style QUIC round-trip latency with HDR histograms, socket tuning, and a GraphQL/CLI harness."

[workspace.dependencies]
# --- async runtime ---
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- errors ---
thiserror = "1"
anyhow = "1"

# --- GraphQL + web ---
axum = { version = "0.8", features = ["macros", "ws"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# --- QUIC transport + TLS ---
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
socket2 = "0.5"

# --- latency measurement ---
hdrhistogram = "7.5"

# --- resilience ---
tokio-retry = "0.3"

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# --- config ---
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# --- concurrency / perf ---
parking_lot = "0.12"
dashmap = "6"

# --- ids / time ---
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- testing / bench ---
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
mockall = "0.12"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

# --- internal crates ---
quicforge-types = { path = "crates/quicforge-types" }
quicforge-resilience = { path = "crates/quicforge-resilience" }
quicforge-core = { path = "crates/quicforge-core" }
quicforge-infra = { path = "crates/quicforge-infra" }
quicforge-api = { path = "crates/quicforge-api" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

# Benchmarks keep debug symbols so the pprof sampling profiler can symbolicate
# flame graphs (`cargo bench --bench <name> -- --profile-time <secs>`).
[profile.bench]
debug = true
strip = false
