[package]
name = "quicforge-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Infrastructure adapters for QuicForge: in-memory run repository, broadcast event sink, system clock, a loopback latency simulator, and a real quinn-based QUIC client + echo server (feature `quic`)."

[features]
default = []
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:socket2"]

[dependencies]
quicforge-types = { workspace = true }
quicforge-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
