[package]
name = "quicforge-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure domain newtypes and value objects for QuicForge (no I/O)."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
